--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
                 <a class="header-menu__link" href="#" title="Products">Products</a>
               </li>
               <li class="header-menu__item">
-                <a class="header-menu__link" href="#" title="Support">Support</a>
+                <a class="header-menu__link" href="#" title="Support">SOPORTE</a>
               </li>
             </ul>
           </nav>
