--- a/src/index.html
+++ b/src/index.html
@@ -19,10 +19,10 @@
           <nav>
             <ul class="header-menu">
               <li class="header-menu__item">
-                <a class="header-menu__link" href="#" title="About">About</a>
+                <a class="header-menu__link" href="#" title="About">Sobre</a>
               </li>
               <li class="header-menu__item">
-                <a class="header-menu__link" href="#" title="Careers">Careers</a>
+                <a class="header-menu__link" href="#" title="Careers">Carreras</a>
               </li>
               <li class="header-menu__item">
                 <a class="header-menu__link" href="#" title="Events">Events</a>
